test/semant/negative_controls/buggy_progs/incorrect-return.con
concept test
purpose "something"
state
actions
  a() : Int
  "incorrect ret"
principle
